--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="/styles/album.css">
     <link rel="stylesheet" type="text/css" href="/styles/player_bar.css">
     <link rel="stylesheet" type="text/css" href="/styles/metric.css">
+    <link rel="stylesheet" type="text/css" href="/styles/nv.d3.css">
+
 </head>
 <body>
 	<nav class="navbar">
@@ -27,10 +29,14 @@
 
 	<ui-view></ui-view>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
+    <script src="/scripts/d3.js"></script>
+    <script src="/scripts/nv.d3.js"></script>
+    <script src="/scripts/angular-nvd3.js"></script>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/LandingCtrl.js"></script>
     <script src="/scripts/controllers/CollectionCtrl.js"></script>
